--- a/e2e-tests/.ci/.e2erc
+++ b/e2e-tests/.ci/.e2erc
@@ -1,8 +1,7 @@
 # Utility variables
 # NB: these assume you `source` them from the directory this file is in
-export MME2E_DOCKER_COMPOSE_BASEFILE=$(readlink -e ../../server/build/gitlab-dc.postgres.yml)
-export MME2E_DOCKER_COMPOSE_OVERRIDEFILE=$(readlink -e ./server.override.yml)
-export MME2E_DOCKER_COMPOSE="docker-compose -f ${MME2E_DOCKER_COMPOSE_BASEFILE:?} -f ${MME2E_DOCKER_COMPOSE_OVERRIDEFILE:?}"
+export MME2E_DC_SERVER="docker-compose -p mmserver -f $(readlink -e ../../server/build/gitlab-dc.postgres.yml) -f $(readlink -e ./server.override.yml)"
+export MME2E_DC_DASHBOARD="docker-compose -p mmdashboard -f $(readlink -e ./dashboard/docker/docker-compose.yml) -f $(readlink -e ./dashboard.override.yml)"
 export MME2E_UID=$(id -u)
 
 # Function definitions
@@ -48,7 +47,7 @@ mme2e_wait_service_healthy () {
   SERVICE_NAME=${1?}
   RETRIES_LEFT=${2:-1}
   RETRIES_INTERVAL=${3:-10}
-  mme2e_wait_command_success "${MME2E_DOCKER_COMPOSE} ps ${SERVICE_NAME} | grep -q '\(healthy\)'" "Waiting for ${SERVICE_NAME} container to be healthy" "$RETRIES_LEFT" "$RETRIES_INTERVAL"
+  mme2e_wait_command_success "${MME2E_DC_SERVER} ps ${SERVICE_NAME} | grep -q '\(healthy\)'" "Waiting for ${SERVICE_NAME} container to be healthy" "$RETRIES_LEFT" "$RETRIES_INTERVAL"
 }
 mme2e_wait_image () {
   IMAGE_NAME=${1?}
@@ -59,8 +58,8 @@ mme2e_wait_image () {
 
 # Utility alias, for interactive shell usage. Can be reversed with 'unalias docker-compose' in your shell
 # NB: this won't work in the script
-alias docker-compose-e2e="${MME2E_DOCKER_COMPOSE}"
-alias docker-compose-dashboard="${MME2E_DOCKER_COMPOSE}" #TODO complete this
+alias docker-compose-e2e="${MME2E_DC_SERVER}"
+alias docker-compose-dashboard="${MME2E_DC_DASHBOARD}"
 
 # Call prerequisite utility functions
 mme2e_load_env_file
