--- a/webapp/platform/client/package.json
+++ b/webapp/platform/client/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "mattermost"
   ],
-  "homepage": "https://github.com/mattermost/mattermost-webapp/tree/master/packages/client#readme",
+  "homepage": "https://github.com/mattermost/mattermost-server/tree/master/webapp/platform/client#readme",
   "license": "MIT",
   "files": [
     "lib"
@@ -15,7 +15,7 @@
   "repository": {
     "type": "git",
     "url": "github:mattermost/mattermost-webapp",
-    "directory": "packages/client"
+    "directory": "webapp/platform/client"
   },
   "dependencies": {
     "form-data": "4.0.0"
