--- a/.github/workflows/channels-ci.yml
+++ b/.github/workflows/channels-ci.yml
@@ -1,16 +1,19 @@
 name: Web App CI
+
 on:
   pull_request:
+    paths:
+      - 'webapp/**/*'
   push:
     branches:
       - master
-      - mono-repo*
+      - cloud
+      - release-*
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: ${{ !contains( github.ref , 'heads/ref/master') }}
-defaults:
-  run:
-    shell: bash
+
 jobs:
   check-lint:
     runs-on: ubuntu-22.04
