--- a/webapp/boards/package.json
+++ b/webapp/boards/package.json
@@ -141,9 +141,6 @@
 		"stylelint": "^14.6.1",
 		"stylelint-config-sass-guidelines": "^9.0.1",
 		"ts-loader": "9.4.2",
-		"typescript": "4.6.2",
-		"webpack": "5.74.0",
-		"webpack-cli": "4.10.0",
-		"webpack-dev-server": "4.10.0"
+		"typescript": "4.6.2"
 	}
 }
