--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,7 +26,10 @@
     "cross-env": "7.0.3",
     "eslint": "8.37.0",
     "eslint-plugin-formatjs": "4.9.1",
-    "strip-ansi": "6.0.1"
+    "strip-ansi": "6.0.1",
+    "webpack": "5.81.0",
+    "webpack-cli": "5.0.2",
+    "webpack-dev-server": "4.13.3"
   },
   "workspaces": [
     "channels",
