--- a/webapp/playbooks/package.json
+++ b/webapp/playbooks/package.json
@@ -105,10 +105,7 @@
     "sass": "1.46.0",
     "sass-loader": "12.4.0",
     "style-loader": "3.3.1",
-    "ts-prune": "0.10.3",
-    "webpack": "5.65.0",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.7.2"
+    "ts-prune": "0.10.3"
   },
   "scripts": {
     "build": "webpack --mode=production --stats-error-details",
