--- a/.github/workflows/server-test-template.yml
+++ b/.github/workflows/server-test-template.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Server Test Template
 on:
   workflow_call:
     inputs:
@@ -11,7 +11,7 @@ on:
 env:
   go-version: "1.19.5"
 jobs:
-  run-tests:
+  test:
     runs-on: ubuntu-latest-8-cores
     env:
       COMPOSE_PROJECT_NAME: ghactions
