--- a/server/Makefile
+++ b/server/Makefile
@@ -135,6 +135,7 @@ TESTS=.
 TE_PACKAGES=$(shell $(GO) list ./... | grep -vE 'server/v8/playbooks|server/v8/boards')
 BOARDS_PACKAGES=$(shell $(GO) list ./... | grep -E 'server/v8/boards')
 PLAYBOOKS_PACKAGES=$(shell $(GO) list ./... | grep -E 'server/v8/playbooks')
+SUITE_PACKAGES=$(shell $(GO) list ./...)
 
 TEMPLATES_DIR=templates
 
@@ -416,7 +417,7 @@ go-junit-report:
 test-compile: ## Compile tests.
 	@echo COMPILE TESTS
 
-	for package in $(TE_PACKAGES) $(BOARDS_PACKAGES) $(PLAYBOOKS_PACKAGES) $(EE_PACKAGES); do \
+	for package in $(SUITE_PACKAGES) $(EE_PACKAGES); do \
 		$(GO) test $(GOFLAGS) -c $$package; \
 	done
 
@@ -467,9 +468,7 @@ ifneq ($(IS_CI),true)
 endif
 
 test-server: test-server-pre
-	./scripts/test.sh "$(GO)" "$(GOFLAGS)" "$(TE_PACKAGES) $(EE_PACKAGES)" "$(TESTS)" "$(TESTFLAGS)" "$(GOBIN)" "45m" "count"
-	./scripts/test.sh "$(GO)" "$(GOFLAGS)" "$(BOARDS_PACKAGES)" "$(TESTS)" "$(TESTFLAGS)" "$(GOBIN)" "45m" "count"
-	./scripts/test.sh "$(GO)" "$(GOFLAGS)" "$(PLAYBOOKS_PACKAGES)" "$(TESTS)" "$(TESTFLAGS)" "$(GOBIN)" "45m" "count"
+	./scripts/test.sh "$(GO)" "$(GOFLAGS)" "$(SUITE_PACKAGES) $(EE_PACKAGES)" "$(TESTS)" "$(TESTFLAGS)" "$(GOBIN)" "90m" "count"
 ifneq ($(IS_CI),true)
   ifneq ($(MM_NO_DOCKER),true)
     ifneq ($(TEMP_DOCKER_SERVICES),)
@@ -486,14 +485,10 @@ test-server-ee: check-prereqs-enterprise start-docker go-junit-report do-cover-f
 test-server-quick: check-prereqs-enterprise ## Runs only quick tests.
 ifeq ($(BUILD_ENTERPRISE_READY),true)
 	@echo Running all tests
-	$(GO) test $(GOFLAGS) -short $(TE_PACKAGES) $(EE_PACKAGES)
-	$(GO) test $(GOFLAGS) -short $(BOARDS_PACKAGES)
-	$(GO) test $(GOFLAGS) -short $(PLAYBOOKS_PACKAGES)
+	$(GO) test $(GOFLAGS) -short $(SUITE_PACKAGES) $(EE_PACKAGES)
 else
 	@echo Running only TE tests
-	$(GO) test $(GOFLAGS) -short $(TE_PACKAGES)
-	$(GO) test $(GOFLAGS) -short $(BOARDS_PACKAGES)
-	$(GO) test $(GOFLAGS) -short $(PLAYBOOKS_PACKAGES)
+	$(GO) test $(GOFLAGS) -short $(SUITE_PACKAGES)
 endif
 
 internal-test-web-client: ## Runs web client tests.
