--- a/.github/workflows/e2e-tests-ci.yml
+++ b/.github/workflows/e2e-tests-ci.yml
@@ -59,3 +59,19 @@ jobs:
       - name: ci/playwright/npm-check
         run: |
           npm run check
+  smoketests:
+    runs-on: ubuntu-22.04
+    needs:
+      - cypress-check
+      - playwright-check
+    defaults:
+      run:
+        working-directory: e2e-tests
+    steps:
+      - name: ci/checkout-repo
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: ci/e2e-smoketests
+        run: |
+          make
