--- a/e2e-tests/.ci/.e2erc
+++ b/e2e-tests/.ci/.e2erc
@@ -3,7 +3,7 @@
 export MME2E_DC_SERVER="docker-compose -p mmserver -f $(readlink -e ../../server/build/gitlab-dc.postgres.yml) -f $(readlink -e ./server.override.yml)"
 export MME2E_DC_DASHBOARD="docker-compose -p mmdashboard -f $(readlink -e ./dashboard/docker/docker-compose.yml) -f $(readlink -e ./dashboard.override.yml)"
 export MME2E_UID=$(id -u)
-export MME2E_SERVER_IMAGE_DEFAULT="mattermost/mm-ee-test:$(git rev-parse HEAD | cut -c1-7)"
+export MME2E_SERVER_IMAGE_DEFAULT="mattermostdevelopment/mm-ee-test:$(git rev-parse --short=7 HEAD)"
 export MME2E_SERVER_IMAGE=${MME2E_SERVER_IMAGE:-$MME2E_SERVER_IMAGE_DEFAULT}
 
 # Function definitions
