--- a/.github/workflows/webapp-ci-template.yaml
+++ b/.github/workflows/webapp-ci-template.yaml
@@ -1,12 +1,9 @@
-name: Web App CI
+# Base CI template which is called from webapp-ci-pr.yml
+# and webapp-ci-master.yml
+
+name: Web App CI Template
 on:
-  pull_request:
-  push:
-    branches:
-      - master
-      - mono-repo*
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  workflow_call:
 
 defaults:
   run:
