--- a/webapp/platform/components/package.json
+++ b/webapp/platform/components/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-formatjs": "10.3.14",
     "babel-plugin-styled-components": "^2.0.6",
     "css-loader": "^6.7.1",
+    "jest": "29.5.0",
     "rollup": "^2.75.7",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
