--- a/webapp/platform/components/package.json
+++ b/webapp/platform/components/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "rollup -c",
     "run": "rollup -c --watch",
+    "test": "cross-env TZ=Etc/UTC jest",
     "clean": "rm -rf dist node_modules tsconfig.tsbuildinfo .rollup.cache"
   },
   "devDependencies": {
@@ -15,11 +16,14 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/preset-typescript": "7.21.5",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "12.1.4",
+    "@types/jest": "26.0.24",
     "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.2",
     "@types/react-bootstrap": "^0.32.22",
@@ -30,8 +34,10 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-formatjs": "10.3.14",
     "babel-plugin-styled-components": "^2.0.6",
+    "cross-env": "7.0.3",
     "css-loader": "^6.7.1",
     "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "rollup": "^2.75.7",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
