MM-52712: Prevent CI cancellation in master (round 2) (#23293)
We discovered that cancel-in-progress only controls
in-progress jobs. Which means that pending jobs will _always_
be cancelled regardless. There is an open discussion:
https://github.com/orgs/community/discussions/5435
which was closed saying this is how the feature is designed.

We try to work around this by refactoring into separate reusable
workflows and having concurrency only for PR workflows.

```release-note
NONE
```

Co-authored-by: Mattermost Build <build@mattermost.com>

--- a/.github/workflows/webapp-ci-template.yml
+++ b/.github/workflows/webapp-ci-template.yml
@@ -1,13 +1,10 @@
-name: Web App CI
+# Base CI template which is called from webapp-ci-pr.yml
+# and webapp-ci-master.yml
+
+name: Web App CI Template
 on:
-  pull_request:
-  push:
-    branches:
-      - master
-      - mono-repo*
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
+  workflow_call:
+
 defaults:
   run:
     shell: bash
