--- a/webapp/platform/components/package.json
+++ b/webapp/platform/components/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-formatjs": "10.3.14",
     "babel-plugin-styled-components": "^2.0.6",
+    "core-js": "3.26.0",
     "cross-env": "7.0.3",
     "css-loader": "^6.7.1",
     "jest": "29.5.0",
