--- a/webapp/boards/package.json
+++ b/webapp/boards/package.json
@@ -6,8 +6,7 @@
 	"scripts": {
 		"build": "webpack --mode=production",
 		"build:watch": "webpack --mode=production --watch",
-		"start": "webpack --mode=development --watch",
-		"start:dev-server": "webpack serve --mode=development",
+		"start:product": "webpack --mode=development --watch",
 		"check-lint": "eslint --ignore-pattern ../.git-ignore --ignore-pattern dist --ext js,jsx,tsx,ts . --quiet --cache",
 		"check-lint:fix": "npm run check-lint -- --fix",
 		"check-style": "stylelint **/*.scss",
