--- a/.github/workflows/test-mmctl.yml
+++ b/.github/workflows/test-mmctl.yml
@@ -1,4 +1,4 @@
-name: Test mmctl
+name: mmctl CI
 on:
   workflow_call:
     inputs:
@@ -11,6 +11,22 @@ on:
 env:
   go-version: "1.19.5"
 jobs:
+  check-mmctl-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout mattermost-server
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - name: Setup Go
+        uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v4.0.0
+        with:
+          go-version: ${{ env.go-version }}
+      - name: Check docs
+        run: |
+          echo "Making sure docs are updated"
+          cd server
+          make mmctl-docs
+          if [[ -n $(git status --porcelain) ]]; then echo "Please update the docs using make docs"; exit 1; fi
+
   run-mmctl-tests:
     runs-on: ubuntu-latest-8-cores
     env:
