Create envfile generation function

--- a/e2e-tests/.ci/.e2erc
+++ b/e2e-tests/.ci/.e2erc
@@ -27,6 +27,11 @@ mme2e_load_env_file () {
   . ./env
   set ${MME2E_PREVIOUS_ALLEXPORT}
 }
+mme2e_generate_envfile_from_vars () {
+  for VARIABLE in "$@"; do
+    [ -z "${!VARIABLE}" ] || echo "${VARIABLE}=${!VARIABLE}";
+  done
+}
 mme2e_wait_command_success () {
   COMMAND=${1?}
   RETRY_MESSAGE=${2?}
